# twenty-questions-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DOCKERHUB.md  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
.github/workflows/: release.yaml
server/: config.py  repository.py
src/migrations/: env.py  utils.py
src/migrations/versions/: cc17c70b259a_rename_turn_game_id_field.py  ccb8d5e9d843_add_qs_asked_remaining_columns_to_turn_.py  f56e092a754c_rename_indexes_from_peewee_sqla.py  fee96a50159f_add_user_name_field.py
src/server/: admin.py  app.py  auth.py  config.py  repository.py
src/server/templates/sqladmin/: details_with_pygments.html  index.html  push_to_hf.html  user_details.html
src/server/templates/twentyqs/: base.html  index.html
src/twentyqs/: brain.py  controller.py  repository.py  runner.py  serde.py  types.py  ui.py
src/twentyqs/chains/: answer_question.py  deciding_question.py  deciding_question_fails.txt  is_yes_no_question_fails.txt  llm_checker.py  pick_subject.py  problem_questions.txt
twentyqs/: brain.py  controller.py  game.py  interface.py  repository.py  run.py  runner.py  serde.py  types.py  view.py
twentyqs/chains/: answer_question.py  deciding_question.py  is_yes_no_question.py  is_yes_no_question_fails.txt  llm_checker.py  llm_checker_camels_dogs.txt  llm_checker_react_questions.txt  pick_subject.py  problem_questions.txt
