[tool.poetry]
name = "twenty-questions-bot"
version = "0.1.0"
description = ""
authors = ["Anentropic <ego@anentropic.com>"]
readme = "README.md"
packages = [
    {include = "twentyqs", from = "src"},
    {include = "server", from = "src"},
    {include = "bin", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "*"
openai = "^0.27.4"
gradio = "^3.25.0"
peewee = "^3.16.0"
coremltools = "^6.3.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
sqladmin = "^0.10.3"
sqlmodel = "^0.0.8"
starlette = "^0.26.1"

[tool.poetry.group.dev.dependencies]
ipython = "*"
pdbpp = "*"
jupyter = "^1.0.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
