[tool.poetry]
name = "twenty-questions-bot"
version = "0.1.0"
description = "A GPT-powered bot that plays 20 Questions with you."
authors = ["Anentropic <ego@anentropic.com>"]
readme = "README.md"
packages = [
    {include = "twentyqs", from = "src"},
    {include = "server", from = "src"},
    {include = "bin", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.0.139"
openai = "^0.27.4"
gradio = "^3.32.0"
coremltools = "^6.3.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
sqladmin = "^0.10.3"
sqlmodel = "^0.0.8"
sqlalchemy-get-or-create = "^0.1.5"
alembic = "^1.11.1"
pygments = "^2.15.1"
starlette = "^0.27.0"
datasets = "^2.12.0"

[tool.poetry.group.dev.dependencies]
ipython = "*"
pdbpp = "*"
mypy = "*"
types-pygments = "^2.15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "gradio.*",
    "datasets.*",
    "sqlalchemy_get_or_create.*",
]
ignore_missing_imports = true

[tool.ruff]
ignore = [
    "E501",
]
